--- a/pages/medicos.html
+++ b/pages/medicos.html
@@ -57,106 +57,243 @@
                     <ul class="dropdown-menu dropdown-user">
                         <li>
                             <a href="#"><i class="fa fa-user fa-fw"></i> Alterar Senha</a>
-                        </li
-                        <li>
-                            <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-              <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
-                            </div>
-                            <!-- /input-group -->
-                        </li>
-                        <li>
-                            <a href="index.html"><i class="fa fa-home fa-fw"></i> Home</a>                            
-                        </li>
-                        <li>
-                            <a href="consulta.html"><i class="fa fa-user-md fa-fw"></i> Consultas</a>
-                        </li>
-                        <li>
-                            <a href="prontuario.html"><i class="fa fa-clipboard fa-fw"></i> Prontuários</a>                            
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-plus-circle fa-fw"></i> Cadastros<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level">
-                                <li>
-                                    <a href="paciente.html">Paciente</a>
-                                </li>
-                                <li>
-                                    <a href="medicos.html">Médico</a>
-                                </li>
-                                <li>
-                                    <a href="enfermeiro.html">Enfermeiro</a>
-                                </li>
-                                <li>
-                                    <a href="tecnico.html">Técnico de Enfermagem</a>
-                                </li>                                
-                                <li>
-                                    <a href="maqueiro.html">Maqueiro</a>
-                                </li>
-                                <li>
-                                    <a href="medicamento.html">Medicamento</a>                            
-                                </li>
-                                <li>
-                                    <a href="usuario.html">Usuário</a>                            
-                                </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>                        
-                        
-                        <li>
-                            <a href="#"><i class="fa fa-book fa-fw"></i> Sobre</a>
+                            </li
+                            <li>
+                                <a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Sair</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <div class="navbar-default sidebar" role="navigation">
+                    <div class="sidebar-nav navbar-collapse">
+                        <ul class="nav" id="side-menu">
+                            <li class="sidebar-search">
+                                <div class="input-group custom-search-form">
+                                    <input type="text" class="form-control" placeholder="Search...">
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-default" type="button">
+                                            <i class="fa fa-search"></i>
+                                        </button>
+                                    </span>
+                                </div>
+                                <!-- /input-group -->
+                            </li>
+                            <li>
+                                <a href="index.html"><i class="fa fa-home fa-fw"></i> Home</a>                            
+                            </li>
+                            <li>
+                                <a href="consulta.html"><i class="fa fa-user-md fa-fw"></i> Consultas</a>
+                            </li>
+                            <li>
+                                <a href="prontuario.html"><i class="fa fa-clipboard fa-fw"></i> Prontuários</a>                            
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-plus-circle fa-fw"></i> Cadastros<span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+                                    <li>
+                                        <a href="paciente.html">Paciente</a>
+                                    </li>
+                                    <li>
+                                        <a href="medicos.html">Médico</a>
+                                    </li>
+                                    <li>
+                                        <a href="enfermeiro.html">Enfermeiro</a>
+                                    </li>
+                                    <li>
+                                        <a href="tecnico.html">Técnico de Enfermagem</a>
+                                    </li>                                
+                                    <li>
+                                        <a href="maqueiro.html">Maqueiro</a>
+                                    </li>
+                                    <li>
+                                        <a href="medicamento.html">Medicamento</a>                            
+                                    </li>
+                                    <li>
+                                        <a href="usuario.html">Usuário</a>                            
+                                    </li>
+                                </ul>
+                                <!-- /.nav-second-level -->
+                            </li>                        
 
-                        </li>
+                            <li>
+                                <a href="#"><i class="fa fa-book fa-fw"></i> Sobre</a>
 
-                    </ul>
-                </div>
-                <!-- /.sidebar-collapse -->
-            </div>
-            <!-- /.navbar-static-side -->
-        </nav>
+                            </li>
 
-        <!-- Page Content -->
-        <div id="page-wrapper">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1 class="page-header">Blank</h1>
+                        </ul>
                     </div>
-                    <!-- /.col-lg-12 -->
+                    <!-- /.sidebar-collapse -->
                 </div>
-                <!-- /.row -->
-            </div>
-            <!-- /.container-fluid -->
-        </div>
-        <!-- /#page-wrapper -->
+                <!-- /.navbar-static-side -->
+            </nav>
+            <!-- Page Content -->
+            <div id="page-wrapper">
+                <div class="container-fluid">
 
-    </div>
-    <!-- /#wrapper -->
+                    <br>
+                    <br>
 
-    <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="panel panel-primary">
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+                                <div class="panel-heading">
+                                    <b>MÉDICO</b>
+                                </div>
+                                <div class="panel-body">
+                                    <ul class="nav nav-tabs">
+                                        <li class="active"><a href="#Cadastrar" data-toggle="tab">Cadastrar</a>
+                                        </li>
+                                    </ul>
 
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
+                                    <br>
 
-    <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
+                                    <div class="tab-content">
 
-</body>
+                                     <div class="row">
+                                        <form role="form">
+                                            <div class="form-group col-md-4">
+                                                <label>CRM</label>
+                                                <input name="crm" type="number" class="form-control" placeholder="Informe o número do CRM" required autofocus>
+                                            </div>
 
-</html>
+                                            <div class="form-group col-md-9">
+                                                <!-- Alinhar campo -->
+                                            </div>
+
+                                            <div class="form-group col-md-6">
+                                                <label>Nome</label>
+                                                <input name="nome" type="text" class="form-control" placeholder="Digite seu nome" pattern="[a-zA-Z\s]+$" required>
+                                            </div>
+
+                                            <div class="form-group col-sm-6">
+                                             <label>E-mail</label>
+                                             <input name="email" type="email" class="form-control" placeholder="Digite seu e-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
+                                         </div>
+
+                                         <div class="form-group col-sm-3">
+                                            <label>Telefone fixo</label>
+                                            <input name="fixo" type="phone" class="form-control" placeholder="Digite seu telefone" id="telefone" maxlength="10" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$">
+                                        </div>
+
+                                        <div class="form-group col-sm-3">
+                                            <label>Celular</label>
+                                            <input name="celular" type="phone" class="form-control" placeholder="Digite seu número de celular" maxlength="11" id="celular" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$">
+                                        </div>
+
+                                        <div class="form-group col-sm-3">
+                                            <label>Data de Nascimento</label>
+                                            <input name="dataNasc" type="date" class="form-control" placeholder="dd/mm/aaaa" id="data" required>
+                                        </div>
+
+                                        <br/>
+
+                                        <div class="form-group col-sm-3">
+                                            <label>Sexo</label>
+                                            <select class="form-control mr-sm-2" required>
+                                                <option>Selecione</option>
+                                                <option>Masculino</option>
+                                                <option>Feminino</option>
+                                            </select>
+                                        </div>
+
+                                        <div class="form-group col-sm-4">
+                                            <label>Cep</label>
+                                            <input name="cep" id="cep" type="number" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}" required>
+                                        </div>
+
+                                        <div class="form-group col-sm-6">
+                                            <label>Logradouro</label>
+                                            <input name="logradouro" id="logradouro" type="text" placeholder="Infome o endereço" class="form-control" required>
+                                        </div>
+
+                                        <div class="form-group col-sm-2">
+                                            <label>Número</label>
+                                            <input name="endNumero" id="endNumero" type="number" placeholder="Nº 1234" class="form-control" required>
+                                        </div>
+
+                                        <div class="form-group col-sm-8">
+                                            <label>Complemento</label>
+                                            <input name="complemento" id="complemento" type="text" placeholder="Complemento" class="form-control" required>
+                                        </div>
+
+                                        <div class="form-group col-sm-4">
+                                            <label>Bairro</label>
+                                            <input name="bairro" id="bairro" type="text" placeholder="Informe o bairro" class="form-control" required>
+                                        </div>
+
+                                        <div class="form-group col-sm-6">
+                                            <label>Cidade</label>
+                                            <input name="cidade" id="cidade" type="text" placeholder="Informe a cidade" class="form-control" required>
+                                        </div>
+
+                                        <br/>
+
+                                        <div class="form-group col-sm-6">
+                                            <label>Estado</label>
+                                            <select name="estado" id="estado" class="form-control mr-sm-2" required>
+                                                <option>Selecione o estado</option>
+                                                <option value="AC">Acre</option>
+                                                <option value="AL">Alagoas</option>
+                                                <option value="AP">Amapá</option>
+                                                <option value="AM">Amazonas</option>
+                                                <option value="BA">Bahia</option>
+                                                <option value="CE">Ceará</option>
+                                                <option value="DF">Distrito Federal</option>
+                                                <option value="ES">Espirito Santo</option>
+                                                <option value="GO">Goiás</option>
+                                                <option value="MA">Maranhão</option>
+                                                <option value="MS">Mato Grosso do Sul</option>
+                                                <option value="MT">Mato Grosso</option>
+                                                <option value="MG">Minas Gerais</option>
+                                                <option value="PA">Pará</option>
+                                                <option value="PB">Paraíba</option>
+                                                <option value="PR">Paraná</option>
+                                                <option value="PE">Pernambuco</option>
+                                                <option value="PI">Piauí</option>
+                                                <option value="RJ">Rio de Janeiro</option>
+                                                <option value="RN">Rio Grande do Norte</option>
+                                                <option value="RS">Rio Grande do Sul</option>
+                                                <option value="RO">Rondônia</option>
+                                                <option value="RR">Roraima</option>
+                                                <option value="SC">Santa Catarina</option>
+                                                <option value="SP">São Paulo</option>
+                                                <option value="SE">Sergipe</option>
+                                                <option value="TO">Tocantins</option>
+                                            </select>
+                                        </div>
+                                    </form>
+                                    <div class="col-md-7">
+                                      <!--alinhamento dos Botões-->
+                                  </div>                                    
+
+                                  <div class="col-md-2 col-sm-12 col-xs-6">
+                                      <button type="reset" class="btn btn-warning btn-block">EXCLUIR</button>
+                                  </div>
+
+                                  <div class="col-md-3 col-sm-12 col-xs-6">
+                                      <button type="button" class="btn btn-success btn-block">SALVAR</button>
+                                  </div>
+                              </div>
+                              <!-- /.container-fluid -->
+                          </div>
+                          <!-- /#page-wrapper -->
+                      </div>
+                  </div>
+                  <!-- /#wrapper -->
+
+                  <!-- jQuery -->
+                  <script src="../vendor/jquery/jquery.min.js"></script>
+
+                  <!-- Bootstrap Core JavaScript -->
+                  <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+
+                  <!-- Metis Menu Plugin JavaScript -->
+                  <script src="../vendor/metisMenu/metisMenu.min.js"></script>
+
+                  <!-- Custom Theme JavaScript -->
+                  <script src="../dist/js/sb-admin-2.js"></script>
+
+              </body>
+
+              </html>
